# simple-anchor-dapp

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
app/: README.md  config-overrides.js  package-lock.json  package.json
app/public/: index.html
app/src/: App.tsx  WalletContext.tsx  constants.ts  context.tsx
app/src/components/: Navbar.tsx  Stats.tsx
app/src/container/: PageContainer.tsx
app/src/lib/: createAccount.ts  fetch.ts  sendSol.ts  utils.ts
app/src/lib/connection/: program.ts  provider.ts
app/src/routes/: Home.tsx
app/src/types/: idl.ts  simple_anchor_dapp.ts
programs/simple-anchor-dapp/: Cargo.toml
programs/simple-anchor-dapp/src/: constants.rs  error.rs  lib.rs  state.rs
programs/simple-anchor-dapp/src/instructions/: create_account.rs  mod.rs  send_sol.rs
tests/: simple-anchor-dapp.ts
