[package]
name = "simple-anchor-dapp"
version = "0.1.0"
description = "A simple solana dapp build using anchor framework"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_anchor_dapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
